<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trips_nav_graph"
    app:startDestination="@id/listTripFragment">

    <include app:graph="@navigation/contacts_manager_navigation_graph" />

    <fragment
        android:id="@+id/addTripFragment"
        android:name="com.planner.feature.trips.fragment.AddTripFragment"
        tools:layout="@layout/fragment_add_trip">
        <action
            android:id="@+id/action_addTripFragment_to_listTripFragment"
            app:destination="@id/listTripFragment"
            app:enterAnim="@android:anim/fade_in"
...
        <argument
            android:name="tripId"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="title"
            android:defaultValue="@string/add_a_trip"
            app:argType="reference" />
        <deepLink app:uri="android-app://com.planner.trips/addTripFragment" />
        <action
            android:id="@+id/action_addTripFragment_to_contacts_manager_navigation_graph"
            app:destination="@id/contacts_manager_navigation_graph" />
    </fragment>
...
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_listTripFragment_to_tripDetailFragment"
            app:destination="@id/tripDetailFragment"
            app:launchSingleTop="false" />
    </fragment>
    <fragment
        android:id="@+id/tripDetailFragment"
        android:name="com.planner.feature.trips.fragment.TripDetailFragment"
        android:label="{fragmentTitle}">
...
