...
                android:maxWidth="488dp"
                app:layout_constraintStart_toStartOf="@id/image_layout"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/image_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trip_title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:maxWidth="488dp"
                app:layout_constraintStart_toStartOf="@id/image_layout"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/trip_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/destination_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>
...
                app:endIconMode="custom"
                app:layout_constraintStart_toStartOf="@id/image_layout"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/destination">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/departure_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
...
                    android:padding="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/contact_list_item" />
            </LinearLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:enabled="@{ fragment.isButtonEnabled() }"
                android:onClick="@{() -> fragment.save()}"
...
