...
                    android:layout_marginTop="6dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/contact_list_item" />
            </LinearLayout>

            <Button
                android:id="@+id/trip_detail_edit_button"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> fragment.editTrip()}"
                android:text="@string/edit"
                app:layout_constraintEnd_toStartOf="@id/trip_detail_delete_button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="4dp"
                app:layout_constraintTop_toBottomOf="@id/trip_mates_section" />

            <Button
                android:id="@+id/trip_detail_delete_button"
...
